--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Chrome plugin for parsing urls",
   "main": "popup.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,11 +18,21 @@
   },
   "homepage": "https://github.com/nvignola/url-parser#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "codecov": "^3.0.0",
+    "copy-webpack-plugin": "^4.2.0",
     "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-import": "^2.8.0",
-    "jest": "^21.2.1"
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.2.1",
+    "webpack": "^3.8.1"
   },
   "jest": {
     "coverageDirectory": "./coverage/",
