--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.8.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
+    "jsdom-mount": "^0.1.0",
     "webpack": "^3.8.1"
   },
   "jest": {
