--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
     "codecov": "^3.0.0",
     "copy-webpack-plugin": "^4.2.0",
+    "css-loader": "^0.28.7",
     "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-import-resolver-webpack": "^0.8.3",
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
     "jsdom-mount": "^0.1.0",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   },
   "jest": {
