--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-import": "^2.8.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
     "jsdom-mount": "^0.1.0",
