--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "nav-star.png",
+    "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
   "permissions": [
