--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "popup.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack"
+    "build": "rm -rf dist && webpack"
   },
   "repository": {
     "type": "git",
