--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "Url Parser",
+  "name": "UPA - The Url Parser",
   "description": "Url parser that works with #. Useful for SPA. Visualize and basic editing.",
   "version": "1.0",
 
