--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "^21.2.1",
     "jsdom-mount": "^0.1.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "^4.16.5",
     "webpack-command": "^0.4.1"
   },
