:hammer: Add lodash sortby dependency for jsdom in tests

--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
       "<rootDir>/node_modules"
     ],
     "testRegex": "(\\.|/)test\\.js$"
+  },
+  "dependencies": {
+    "lodash.sortby": "^4.7.0"
   }
 }
