--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,13 @@
   "name": "UPA - The Url Parser",
   "description": "Url parser that works with #. Useful for SPA. Visualize and basic editing.",
   "version": "1.0",
-
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
-  "permissions": [
-    "activeTab"
-  ]
+  "permissions": ["tabs", "activeTab"]
 }
