--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-import-resolver-webpack": "^0.12.2",
     "eslint-plugin-import": "^2.22.0",
-    "html-webpack-plugin": "^4.3.0",
+    "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
     "jsdom-mount": "^0.1.0",
     "mini-css-extract-plugin": "^1.3.1",
     "svg-inline-loader": "^0.8.2",
     "webpack": "^4.44.2",
-    "webpack-command": "^0.5.0"
+    "webpack-cli": "^4.2.0"
   },
   "jest": {
     "coverageDirectory": "./coverage/",
