--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,13 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
 
   "name": "UPA - The Url Parser",
   "description": "Url parser that works with #. Useful for SPA. Visualize and basic editing.",
-  "version": "1.2",
+  "version": "1.3",
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "service_worker": "background.js"
   },
-  "browser_action": {
+  "action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
